# SciCore

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
include/SciCore/: BasicMath.h  Cheb.h  Cheb2.h  ChebAdaptive.h  DCT.h  DCT2.h  Definitions.h  IDECheb.h  Integration.h  IntegrationWeights.h  Parallel.h  Random.h  Serialization.h  Utility.h
src/: BasicMath.cpp  CMakeLists.txt  Cheb.cpp  Cheb2.cpp  ChebAdaptive.cpp  DCT.cpp  DCT2.cpp  Random.cpp  Utility.cpp
tests/: BasicMathTest.cpp  CMakeLists.txt  Cheb2Test.cpp  ChebAdaptiveTest.cpp  ChebTest.cpp  DCTTest.cpp  IDEChebTest.cpp  IntegrationTest.cpp  RandomTest.cpp  SerializationTest.cpp  UtilityTest.cpp
